src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTTextureArray_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTTextureArray_StringErrorContext.class */
public final class EXTTextureArray_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glFramebufferTextureLayerEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureArrayErrorContext");
        return methods;
    }
}
